2011-04-01  Nick Treleaven  <nick(dot)treleaven(at)btinternet(dot)com>

 * src/interface.c, src/interface.h, geany.glade:
   Rename Preferences dialog Interface subtab More -> Notebook tabs.
 * src/toolbar.c, src/dialogs.c:
   Use mimetype icon in File Properties dialog.
 * doc/geany.txt, doc/geany.html:
   Fix title capitalization.
 * src/interface.c, doc/geany.txt, doc/geany.html, geany.glade:
   Move Preferences dialog Toolbar tab under Interface tab.
 * src/build.c:
   Tweak some build dialog labels:
   Clear -> Reset.
   Fix capitalization.
   Use filetype name instead of title.
 * src/templates.c, src/templates.h, doc/geany.txt, doc/geany.html:
   Remove old filetype templates support - users can use custom file
   templates instead.


2011-04-01  Colomban Wendling  <colomban(at)geany(dot)org>

 * src/encodings.c:
   Update regex used to find encodings for it to allow the encoding to
   be quoted, adding support for XML (closes #3183506).
 * src/encodings.c:
   Implement charset name normalization in order to better deal with
   badly-written encoding names (i.e. names found by regex search).
   This also makes encodings_get_idx_from_charset() and
   encodings_get_from_charset() more permissive regarding the passed-in
   encoding name.
 * src/encodings.c:
   Always try to honor the charset found in the document, even if the
   document can be loaded as UTF-8.
   This make files encoded with e.g. ISO-8859-1 that have the proper
   information in them but only use the UTF-8 compatible part of
   ISO-8859-1 to be properly loaded as ISO-8859-1, rather than UTF-8.
   Also fix check for locale encoding.
 * src/tools.c, doc/geany.txt, doc/geany.html:
   Make `Send selection to` send the current line if there is no
   selection.


2011-03-31  Nick Treleaven  <nick(dot)treleaven(at)btinternet(dot)com>

 * plugins/filebrowser.c:
   Make 'Hide object files' preference configurable with file
   extensions.
 * plugins/filebrowser.c: