@@ -1324,10 +1324,9 @@ of the program's standard error will be printed on Geany's standard
 output.</p>
 <p>If there is no selection, the whole current line is used instead.</p>
 <p>To add a custom command, use the <em>Send Selection to-&gt;Set Custom
-Commands</em> menu item. Click on <em>Add</em> to get a new text entry and type
-the command. You can also specify some command line options. To
-delete a command, just clear the text entry and press OK. It will be
-deleted automatically.</p>
+Commands</em> menu item. Click on <em>Add</em> to get a new item and type the
+command. You can also specify some command line options. Empty
+commands are not saved.</p>
 <p>Normal shell quoting is supported, so you can do things like:</p>
 <ul class="simple">
 <li><tt class="docutils literal"><span class="pre">sed</span> <span class="pre">'s/\./(dot)/g'</span></tt></li>
